fix - logo alignment issue

--- a/assets/sass/layouts/header/layout/_2-clean.scss
+++ b/assets/sass/layouts/header/layout/_2-clean.scss
@@ -49,6 +49,22 @@
 	/* Primary Header. */
 	#header-text-nav-wrap {
 		padding: 30px 0;
+		display: flex;
+		column-gap: 30px;
+		justify-content: space-between;
+		flex-wrap: wrap;
+	}
+
+	#header-left-section {
+		flex-basis: 30%;
+	}
+
+	#header-right-section {
+		flex-basis: 65%;
+	}
+
+	img {
+		margin-bottom: 0;
 	}
 
 	.home-icon {
@@ -220,6 +236,15 @@
 					padding: 15px;
 				}
 			}
+		}
+	}
+}
+
+@media only screen and (max-width: 992px) {
+	.colormag-header-clean {
+		#header-text-nav-wrap {
+			justify-content: center;
+			row-gap: 30px;
 		}
 	}
 }
